# langroid-ui

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  TRASH-FILES.md  pyproject.toml  run.sh  run_with_callbacks.sh  start-local.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  __init__.py  main.py  main_with_callbacks.py  poc_main.py  requirements.txt  test.html  test_poc.py  test_streaming.html
backend/core/: __init__.py  agent_factory.py  callbacks.py  session.py  session_callbacks.py  streaming_agent.py  websocket_callbacks.py
backend/models/: __init__.py  messages.py
backend/utils/: __init__.py  async_bridge.py
docs/: langroid-learnings.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
frontend/src/types/: index.ts
issues/: backend-update-plan.md  general-langroid-ui.md  langroid-callback-enhancement-proposal.md  langroid-native-callbacks-implementation.md  langroid-ui-streaming-callback.md  web-ui-callbacks-implementation-new.md
tiktoken/: __init__.py
